Add base files for sass

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,1 +1,5 @@
-@import './variables.sass'
+@import './base/variables.sass'
+@import './base/breakpoints.sass'
+@import './base/reset.sass'
+
+@import './mainSection.sass'
