--- a/src/sass/base/_variables.sass
+++ b/src/sass/base/_variables.sass
@@ -46,8 +46,8 @@ $color-white: #ffffff
 $color-black: #323232
 
 //----- fonts ----------------------------------------------------------------------------------------------------------
-$font-face-header: 'Rubik'
-$font-face-body: 'Nunito Sans'
+$font-face-header: 'Roboto'
+$font-face-body: 'Roboto'
 $font-family-header: $font-face-header, sans-serif
 $font-family-body: $font-face-body, serif
 
