--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,5 +1,9 @@
 @import './base/variables.sass'
 @import './base/breakpoints.sass'
 @import './base/reset.sass'
+@import './base/mixins.sass'
+
+@import './shared/fonts.sass'
+@import './shared/base.sass'
 
 @import './mainSection.sass'
