--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,49 +3,180 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
   font-weight: 100;
 }
 
+/* roboto-100 - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 100;
+  src: url("..//assets/fonts/roboto-v30-latin-100.woff2") format("woff2"), url("../assets/fonts/roboto-v30-latin-100.woff") format("woff");
+}
+/* roboto-regular - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../assets/fonts/roboto-v30-latin-regular.woff2") format("woff2"), url("roboto-v30-latin-regular.woff") format("woff");
+}
+/* roboto-300 - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../assets/fonts/roboto-v30-latin-300.woff2") format("woff2"), url("../assets/fonts/roboto-v30-latin-300.woff") format("woff");
+}
+/* roboto-500 - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../assets/fonts/roboto-v30-latin-500.woff2") format("woff2"), url("../assets/fonts/roboto-v30-latin-500.woff") format("woff");
+}
+/* roboto-700 - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../assets/fonts/roboto-v30-latin-700.woff2") format("woff2"), url("../assets/fonts/roboto-v30-latin-700.woff") format("woff");
+}
+/* roboto-900 - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 900;
+  src: url("../assets/fonts/roboto-v30-latin-900.woff2") format("woff2"), url("../assets/fonts/roboto-v30-latin-900.woff") format("woff");
+}
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+body {
+  color: #b7bbc2;
+  font-family: "Roboto", serif;
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+}
+
+b,
+strong {
+  font-weight: 700;
+}
+
+a,
+button,
+input[type=button],
+input[type=submit] {
+  cursor: pointer;
+}
+
+a {
+  color: #6c74e9;
+}
+@media (hover: hover) and (pointer: fine) {
+  a:hover {
+    color: #6c74e9;
+  }
+}
+
+img,
+picture {
+  display: block;
+  max-width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 1.5rem;
+  margin-top: 0;
+}
+
+p {
+  margin-bottom: 1rem;
+  margin-top: 0;
+}
+
+button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 0;
+}
+
+textarea {
+  resize: vertical;
+}
+
 .main-section {
-  background: url("../assets/main-background.jpg") no-repeat scroll center;
+  background: url("../assets/images/main-background.jpg") no-repeat scroll center;
   color: #ffffff;
   height: 100vh;
 }
+.main-section__brand-name {
+  font-weight: normal;
+  margin-bottom: 0;
+  margin-left: 1rem;
+}
 .main-section__button {
-  visibility: hidden;
-  background: none;
-  border: none;
-  padding: 0.5rem;
   color: #ffffff;
+  display: none;
+  height: 80%;
+  margin-right: 1rem;
+  min-width: 10vw;
+  padding: 0 0.5rem;
 }
 @media (min-width: 992px) {
   .main-section__button {
-    visibility: visible;
+    display: inline-block;
   }
 }
 .main-section__button:hover {
-  outline: 2px solid rgba(255, 255, 255, 0.2);
+  border: 2px solid rgba(255, 255, 255, 0.2);
   cursor: pointer;
   border-radius: 0.5rem;
 }
+.main-section__button.-profile {
+  border: 2px solid rgba(255, 255, 255, 0.2);
+}
 .main-section__header {
+  -webkit-box-align: 80%;
+      -ms-flex-align: 80%;
+          align-items: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1.5rem;
+  padding: 1rem 1.5rem;
 }
 .main-section__logo-icon {
   width: 30px;
 }
-.main-section__logo-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.main-section__wrapper {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.main-section__navigation-button {
+  fill: #ffffff;
 }/*# sourceMappingURL=index.css.map */
