--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -137,9 +137,9 @@ textarea {
   color: #ffffff;
   display: none;
   height: 80%;
-  margin-right: 1rem;
-  min-width: 10vw;
+  margin-right: 1.375rem;
   padding: 0 0.5rem;
+  width: 120px;
 }
 @media (min-width: 992px) {
   .main-section__button {
@@ -152,7 +152,12 @@ textarea {
   border-radius: 0.5rem;
 }
 .main-section__button.-profile {
+  border-radius: 1.5rem;
   border: 2px solid rgba(255, 255, 255, 0.2);
+  height: 3rem;
+  overflow: hidden;
+  padding: unset;
+  width: auto;
 }
 .main-section__header {
   -webkit-box-align: 80%;
@@ -168,6 +173,11 @@ textarea {
 }
 .main-section__logo-icon {
   width: 30px;
+}
+.main-section__profile-picture {
+  display: inline-block;
+  height: 3rem;
+  width: 3rem;
 }
 .main-section__wrapper {
   -webkit-box-align: center;
