main page implementation

--- a/src/sass/base/_mixins.sass
+++ b/src/sass/base/_mixins.sass
@@ -2,3 +2,8 @@
   @media (hover: hover) and (pointer: fine)
     &:hover
       @content
+
+=transition($property...)
+  transition-property: $property
+  transition-duration: $transition-duration
+  transition-timing-function: $transition-function
