--- a/src/sass/_mainSection.sass
+++ b/src/sass/_mainSection.sass
@@ -1,7 +1,25 @@
 .main-section
-  background: url('../assets/images/main-background.jpg') no-repeat scroll center
+  background-image: url('../assets/images/main-background.jpg')
+  background-position: center
+  background-repeat: no-repeat
+  background-size: cover
   color: $color-white
   height: 100vh
+
+  &__additional-info
+    font-weight: $font-weight-light
+    position: relative
+
+    &::before
+      border-left: 5px solid $color-white
+      border-radius: $border-radius-sm
+      bottom: -10%
+      content: ''
+      height: 120%
+      position: absolute
+
+    p
+      margin-left: $m-base
 
   &__brand-name
     font-weight: normal
@@ -10,12 +28,44 @@
       left: $m-sm
 
   &__button
+    align-items: center
+    background: rgba($color-white, .3)
+    border-radius: 0
+    color: $color-white
+    display: flex
+    height: $line-height-lg
+    line-height: $line-height-lg
+    padding: 0
+
+  &__button-icon
+    background-color: $color-white
+    display: inline-block
+    height: inherit
+    padding: $m-xs
+
+  &__button-info
+    padding: $m-base
+
+  &__header
+    align-items: 80%
+    display: flex
+    justify-content: space-between
+    padding: $m-sm
+
+    +media-breakpoint-up(md)
+      padding: $m-sm $m-base
+
+  &__logo-icon
+    width: 30px
+
+  &__navigation-button
     color: $color-white
     display: none
     height: 80%
     margin-right: $font-size-lg
     padding: 0 $m-xs
     width: 120px
+    font-size: $font-size-sm
 
     +media-breakpoint-up(lg)
       display: inline-block
@@ -32,20 +82,15 @@
       overflow: hidden
       padding: unset
       width: auto
-
-  &__header
-    align-items: 80%
-    display: flex
-    justify-content: space-between
-    padding: $m-sm $m-base
-
-  &__logo-icon
-    width: 30px
+      margin-right: $m-base
 
   &__profile-picture
     display: inline-block
     height: $m-lg
     width: $m-lg
+
+  &__subtitle
+    font-size: $font-size-3xl
 
   &__wrapper
     align-items: center
@@ -53,3 +98,4 @@
 
   &__navigation-button
     fill: $color-white
+    padding: unset
