--- a/src/sass/shared/_base.sass
+++ b/src/sass/shared/_base.sass
@@ -13,6 +13,12 @@ body
     size: $font-size-base
   line-height: $line-height-base
 
+main
+  padding: $m-sm
+
+  +media-breakpoint-up(md)
+    padding: $m-sm $m-base
+
 b,
 strong
   font-weight: $font-weight-bold
