--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,6 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-weight: 100;
 }
 
 /* roboto-100 - latin */
@@ -66,6 +65,15 @@ body {
   line-height: 1.5rem;
 }
 
+main {
+  padding: 1rem;
+}
+@media (min-width: 768px) {
+  main {
+    padding: 1rem 1.5rem;
+  }
+}
+
 b,
 strong {
   font-weight: 700;
@@ -123,10 +131,59 @@ textarea {
   resize: vertical;
 }
 
+.btn {
+  -webkit-transition-property: background-color, color;
+  transition-property: background-color, color;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Roboto", serif;
+  font-size: 1.125rem;
+  font-weight: 400;
+  line-height: 1.5rem;
+  padding: 0.5rem 1.5rem;
+  text-decoration: none;
+}
+.btn.-lg {
+  font-size: 1.125rem;
+  font-weight: 700;
+  letter-spacing: 1.5px;
+  padding: 1.5rem;
+  width: 100%;
+}
+.btn.-sm {
+  font-size: 0.75rem;
+  line-height: 1.5rem;
+  padding: 0.5rem 1rem;
+}
+
 .main-section {
-  background: url("../assets/images/main-background.jpg") no-repeat scroll center;
+  background-image: url("../assets/images/main-background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   color: #ffffff;
   height: 100vh;
+}
+.main-section__additional-info {
+  font-weight: 300;
+  position: relative;
+}
+.main-section__additional-info::before {
+  border-left: 5px solid #ffffff;
+  border-radius: 0.5rem;
+  bottom: -10%;
+  content: "";
+  height: 120%;
+  position: absolute;
+}
+.main-section__additional-info p {
+  margin-left: 1.5rem;
 }
 .main-section__brand-name {
   font-weight: normal;
@@ -134,30 +191,27 @@ textarea {
   margin-left: 1rem;
 }
 .main-section__button {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 0;
   color: #ffffff;
-  display: none;
-  height: 80%;
-  margin-right: 1.375rem;
-  padding: 0 0.5rem;
-  width: 120px;
-}
-@media (min-width: 992px) {
-  .main-section__button {
-    display: inline-block;
-  }
-}
-.main-section__button:hover {
-  border: 2px solid rgba(255, 255, 255, 0.2);
-  cursor: pointer;
-  border-radius: 0.5rem;
-}
-.main-section__button.-profile {
-  border-radius: 1.5rem;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   height: 3rem;
-  overflow: hidden;
-  padding: unset;
-  width: auto;
+  line-height: 3rem;
+  padding: 0;
+}
+.main-section__button-icon {
+  background-color: #ffffff;
+  display: inline-block;
+  height: inherit;
+  padding: 0.5rem;
+}
+.main-section__button-info {
+  padding: 1.5rem;
 }
 .main-section__header {
   -webkit-box-align: 80%;
@@ -169,15 +223,51 @@ textarea {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1rem 1.5rem;
+  padding: 1rem;
+}
+@media (min-width: 768px) {
+  .main-section__header {
+    padding: 1rem 1.5rem;
+  }
 }
 .main-section__logo-icon {
   width: 30px;
+}
+.main-section__navigation-button {
+  color: #ffffff;
+  display: none;
+  height: 80%;
+  margin-right: 1.375rem;
+  padding: 0 0.5rem;
+  width: 120px;
+  font-size: 0.875rem;
+}
+@media (min-width: 992px) {
+  .main-section__navigation-button {
+    display: inline-block;
+  }
+}
+.main-section__navigation-button:hover {
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+  border-radius: 0.5rem;
+}
+.main-section__navigation-button.-profile {
+  border-radius: 1.5rem;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  height: 3rem;
+  overflow: hidden;
+  padding: unset;
+  width: auto;
+  margin-right: 1.5rem;
 }
 .main-section__profile-picture {
   display: inline-block;
   height: 3rem;
   width: 3rem;
+}
+.main-section__subtitle {
+  font-size: 3.875rem;
 }
 .main-section__wrapper {
   -webkit-box-align: center;
@@ -189,4 +279,5 @@ textarea {
 }
 .main-section__navigation-button {
   fill: #ffffff;
+  padding: unset;
 }/*# sourceMappingURL=index.css.map */
