Simple second page implementation

--- a/src/sass/base/_variables.sass
+++ b/src/sass/base/_variables.sass
@@ -40,7 +40,9 @@ $container: map-get($grid-breakpoints, xl)
 
 //----- colors ---------------------------------------------------------------------------------------------------------
 $brand-primary: #6c74e9
-$color-secondary: #b7bbc2
+$brand-secondary: #b7bbc2
+
+$background-color: #f9fbf6
 
 $color-white: #ffffff
 $color-black: #323232
