--- a/src/sass/shared/_base.sass
+++ b/src/sass/shared/_base.sass
@@ -7,7 +7,8 @@ html:focus-within
   scroll-behavior: smooth
 
 body
-  color: $color-secondary
+  background-color: $background-color
+  color: $brand-secondary
   font:
     family: $font-family-body
     size: $font-size-base
