--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -59,6 +59,7 @@ html:focus-within {
 }
 
 body {
+  background-color: #f9fbf6;
   color: #b7bbc2;
   font-family: "Roboto", serif;
   font-size: 1.125rem;
@@ -280,4 +281,82 @@ textarea {
 .main-section__navigation-button {
   fill: #ffffff;
   padding: unset;
+}
+
+.video-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-weight: 300;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 4.5rem;
+}
+.video-section hr {
+  border-color: #b7bbc2;
+  border-radius: 1.5rem;
+  margin: 1.5rem 0;
+  opacity: 0.1;
+}
+.video-section__card {
+  background-color: #ffffff;
+  margin: 0 0.5rem;
+}
+.video-section__card-info {
+  font-size: 0.75rem;
+  margin: unset;
+  text-transform: uppercase;
+}
+.video-section__card-info-wrapper {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.video-section__card-info-wrapper hr {
+  margin: 0.5rem 0;
+}
+.video-section__card-title {
+  color: #323232;
+  margin: 0;
+}
+.video-section__card-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1rem 1.5rem;
+}
+.video-section__column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  position: relative;
+}
+.video-section__main-header {
+  color: #323232;
+  line-height: 2.4rem;
+  width: 6rem;
+  word-spacing: 6rem;
+}
+.video-section__main-header::before {
+  border-left: 8px solid #6c74e9;
+  border-radius: 0.5rem;
+  bottom: 100%;
+  content: "";
+  height: 50px;
+  left: 20px;
+  position: absolute;
+  -webkit-transform: rotateZ(90deg);
+          transform: rotateZ(90deg);
 }/*# sourceMappingURL=index.css.map */
